Added final content

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -35,7 +35,7 @@ Img{
 /*Navbar properties and extra styling*/
   .navbar {
       overflow: hidden;
-      background-color: #32192d;
+      background-color: #333;
       font-family: Arial, Helvetica, sans-serif;
 	    height: 50px;
   }
