--- a/Assets/css/contact.css
+++ b/Assets/css/contact.css
@@ -1,39 +1,30 @@
-.myForm > * {
- font: 1.4em 'Unkempt', sans-serif;
+body{
+  background-color:;
 }
-.myForm {
-	display: grid;
-	grid-template-columns: [labels] auto [controls] 1fr;
-	grid-auto-flow: row;
-	grid-gap: .8em .5em;
-	background: #C9FFE2;
-  text-align: center;
-	padding: 1.2em;
-	width: 36em;
+
+
+.pass-input{
+  margin-left: 0px;
 }
-.myForm > label,
-.myForm > fieldset  {
-	grid-column: labels;
-	grid-row: auto;
+
+.title{
+  margin-left: -5px;
 }
-.myForm > input,
-.myForm > select,
-.myForm > textarea {
-	grid-column: controls;
-	grid-row: auto;
-	padding: .4em;
-	border: 0;
+.title1{
+  margin-left: -10px;
 }
-.myForm > fieldset,
-.myForm > button {
-	grid-column: span 2;
+.title3{
+  margin-left: 14px;
 }
-.myForm > button {
-	padding: 1em;
-	background: #7DE2D1;
-	border: 0;
-	color: white;
-	}
-.myForm > textarea {
-	min-height: 3em;
-	}
+
+.block{
+  margin-right: 50px;
+}
+
+.title4{
+  margin-right: 200px;
+}
+
+.boxed {
+  border: 1px solid green ;
+}
