--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,17 +5,36 @@ body {
   background-repeat: no-repeat, repeat;
 }
 
+
 h1{
   text-decoration: underline;
 }
+
+a{
+  color:black;
+}
+/*main header on home page */
+.Mainhead{
+  font-size:40px;
+  color: #3DA35D;
+  text-align: center;
+}
+ .centre{
+   text-align: center;
+ }
 
 p{
   font-size:20px;
 }
 
+/*Images main settings*/
 Img{
+  width:540px ;
+  height:400px ;
   border:2px solid black;
 }
+
+
   /*Creating page*/
   #wrapper {
     background:#FCF5C7;
@@ -31,66 +50,7 @@ Img{
     display: block;
 
 }
-/*Had trouble with navbar not willing to be sicky but changed the code from being a class to a I.D*/
-/*Navbar properties and extra styling*/
-  .navbar {
-      overflow: hidden;
-      background-color: #333;
-      font-family: Arial, Helvetica, sans-serif;
-	    height: 50px;
-  }
-
-  .navbar a {
-      float: left;
-      font-size: 16px;
-      color: white;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-  }
-
-  .dropdown {
-      float: left;
-      overflow: hidden;
-  }
-
-  .dropdown .dropbtn {
-      font-size: 16px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-      font-family: inherit;
-      margin: 0;
-			height:30px;
-  }
-
-  .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-  }
-
-  .dropdown-content a {
-      float: none;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-  }
-
-  .dropdown-content a:hover {
-      background-color: #ddd;
-  }
-
-  .dropdown:hover .dropdown-content {
-      display: block;
-  }
+?
    #contact{
      height:5px;
    }
@@ -105,13 +65,13 @@ Img{
   font-size: 20px;
   color: white;
   background-color: black;
-  width: 100%;
-  height: 40px;
+  width: 99%;
+  height: 38px;
   text-align: center;
 }
 
 /*Responsive layout*/
-@media (max-width:320px) {
+/* @media (min-width:320px) {
   .grid_main{
     display: grid;
     grid-template-columns: auto;
@@ -126,4 +86,21 @@ img {
     width: 800px;
     margin-left:170px;
     display: block;
+ } */
+
+ @media (max-width:1326px) {
+    #wrapper{
+      margin-left: 50px;
+    }
+
+    .navbar{
+      width: 0px;
+    }
+ }
+
+ @media (min-width:375px) {
+    #wrapper{
+      width: 1100px;
+      margin-left: 100px;
+    }
  }
