--- a/Assets/css/dropbox.css
+++ b/Assets/css/dropbox.css
@@ -3,7 +3,7 @@
   background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
   height: 45px;
-  width: 1157px;
+  width: 102.8%;
   margin-top: -90px;
   margin-left: -15px; }
 
