--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,10 @@ p{
 }
 
 /*Images main settings*/
-Img{
+ Img{
   width:540px ;
   height:400px ;
-  border:2px solid black;
+  border:1px solid black;
 }
 
 
@@ -70,23 +70,23 @@ Img{
   text-align: center;
 }
 
-/*Responsive layout*/
-/* @media (min-width:320px) {
+/* Responsive layout*/
+ @media (min-width:320px) {
   .grid_main{
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto auto;
   }
 img {
-  width: 200px;
-  height: 200px;
+  width:40%;
+  height:40% ;
 }
 
 #wrapper {
     width: 800px;
     margin-left:170px;
     display: block;
- } */
+ }
 
  @media (max-width:1520px) {
     #wrapper{
