--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,14 @@ body {
 
 
 .h1{
+  color: black;
   text-decoration: underline;
-
+  font-weight: 1100px;
 }
 
-.h1 a{
-  ;
-}
+.h1 a:hover{
+  background-color: #202A2D; }
+
 /*main header on home page */
 .Mainhead{
   font-size:40px;
@@ -29,12 +30,26 @@ p{
 }
 
 /*Images main settings*/
- Img{
+ img{
   width:49% ;
-  height:40% ;
-  border:1px solid black;
+  height:49% ;
+  border:2px solid black;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+img {
+    transition: transform .2s;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
 
   /*Creating page*/
   #wrapper {
@@ -42,27 +57,43 @@ p{
     padding-left: 15px;
     padding-right: 15px;
 }
-
 #wrapper {
-    width: 100%;
+    width: 98%;
     margin-left:170px;
     position: relative;
     padding-top: 90px;
     display: block;
 
 }
-?
    #contact{
      height:5px;
    }
-  .grid_main{
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-  }
+/* navbar settings */
+   .navbar {
+     overflow: hidden;
+     background-color: #333;
+     font-family: Arial, Helvetica, sans-serif;
+     height: 45px;
+     width: 60%;
+     margin-top: -90px;
+     margin-left: -15px; }
 
+   .navbar a {
+     float: left;
+     font-size: 16px;
+     color: white;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none; }
+
+   .navbar a:hover{
+     background-color: #202A2D; }
+
+
+
+
+/* footer settings */
   footer{
-  padding-top: 30px;
   font-size: 20px;
   color: white;
   background-color: black;
@@ -72,23 +103,12 @@ p{
 }
 
 /* Responsive layout*/
- @media (min-width:320px) {
-  .grid_main{
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-  }
-img {
-  width:40%;
-  height:40% ;
+ @media (max-width:1024px) {
+   .navbar{
+       width: 120%;
+   }
+
 }
-
-#wrapper {
-    width: 800px;
-    margin-left:170px;
-    display: block;
- }
-
  @media (max-width:1520px) {
     #wrapper{
       width: 50px;
@@ -96,17 +116,28 @@ img {
     }
 
     .navbar{
-      width: 0px;
+      width: 20%;
     }
  }
 
 
- @media (min-width:300px){
-    #wrapper{
-      width: 75%;
-      margin-left: 12%;
-    }
+ @media (min-width:344px){
+   .grid_main{
+     display: grid;
+     grid-template-columns: auto;
+     grid-template-rows: auto auto auto;
+   }
+ img {
+   width:40%;
+   height:40% ;
+ }
 
-    .navbar{
-      width: 1159px;
-    }
+
+#wrapper{
+    width: 75%;
+    margin-left: 12%;
+ }
+
+.navbar{
+    width: 102.8%
+}
