--- a/css/style.css
+++ b/css/style.css
@@ -146,11 +146,6 @@ img:hover {
 
 
 @media (max-width:872px){
-  .grid_main{
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-  }
 img {
   width:90%;
   height:40% ;
@@ -164,4 +159,20 @@ img {
 
 .navbar{
    width: 105%
+}
+
+@media (max-width:360px){
+img {
+  width:90%;
+  height:40% ;
+}
+
+
+#wrapper{
+   width: 75%;
+   margin-left: 12%;
+}
+
+.navbar{
+   width: 114%
 }
